k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: MY_CONTAINERIMAGE
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
